--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-swiper": "^1.4.11",
     "react-native-tab-navigator": "^0.3.3",
-    "react-native-vector-icons": "^2.1.0"
+    "react-native-vector-icons": "^2.1.0",
+    "react-native-video": "^0.9.0"
   }
 }
