--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "^0.33.0",
+    "react-native-gesture-password": "^0.2.0",
     "react-native-scrollable-tab-view": "^0.6.0",
+    "react-native-swipe-cards": "0.0.9",
     "react-native-swiper": "^1.4.11",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^2.1.0",
