--- a/ios/ThirtyDaysOfReactNative/Info.plist
+++ b/ios/ThirtyDaysOfReactNative/Info.plist
@@ -60,5 +60,7 @@
       <string>Octicons.ttf</string>
       <string>Zocial.ttf</string>
     </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>此 App 需要您的同意才能读取媒体资料库</string>
   </dict>
 </plist>
